<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feature_user_data_empty_watchlist">Your watchlist is empty</string>
    <string name="feature_user_data_empty_watchlist_description">Start exploring, add to your watchlist to see them here!</string>
    <string name="feature_user_data_empty_movies_ratings">You haven't rated any movies</string>
    <string name="feature_user_data_empty_tv_shows_ratings">You haven't rated any shows</string>
    <string name="feature_user_data_empty_movies_rating_description">Start exploring, rate movies to see them here!</string>
    <string name="feature_user_data_empty_shows_rating_description">Start exploring, rate shows to see them here!</string>
    <string name="feature_user_data_login_rated_description">You need to be logged in to view your ratings.</string>
    <string name="feature_user_data_login_watchlist_description">You need to be logged in to view your watchlist.</string>
    <string name="feature_user_data_login_favorites_description">You need to be logged in to view your favorites.</string>
    <string name="empty_favorite_list_title">You don't have any favorites yet</string>
    <string name="empty_favorite_list_description">Start exploring and add your favorites to see them here!</string>
</resources>
